Arrays: code style, grammar